[package]
name = "trains"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }

